force-app/main/default/objects/Eletric_Measurement__c/Eletric_Measurement__c.object-meta.xml
<CustomObject>
    <label>Health Measurement</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Station Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Measurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>