force-app/main/default/objects/Eletric_Measurement__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>Current (Ampere)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>