force-app/main/default/objects/Eletric_Measurement__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <label>Power (Watt)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>