force-app/main/default/objects/Eletric_Measurement__c/fields/Resistance__c.field-meta.xml
<CustomField>
    <fullName>Resistance__c</fullName>
    <label>Resistance (Ohm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>