force-app/main/default/objects/Eletric_Measurement__c/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Asset__c</columns>
    <columns>Last_Verification__c</columns>
    <filterScope>Mine</filterScope>
    <label>Default</label>
</ListView>